--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
 				</div>
 			</section>
 			<section class="section-form">
-				<button id="btnAdd" class="btn btn-danger">Add Task</button>
+				<div>
+					<button id="btnAdd" class="btn btn-danger">Add Task</button>
+					<button id="btnClear" class="btn btn-danger">
+						Clear All
+					</button>
+				</div>
 				<form>
 					<div>
 						<label class="form-label">Title</label>
